<resources>
    <string name="app_name">CV Maker</string>
    <string name="makeCV">Make your CV</string>
    <string name="text">Are you searching for resume which every recruiter will notice? You are in the right place! Click the button above and
    start your journey to success.</string>

    <string name="bachelor">Bachelor degree</string>
    <string name="master">Master degree</string>
    <string name="doctoral">Doctoral degree</string>
    <string name="highSchool">High School</string>
    <string name="languages">Languages</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="next">Next</string>

    <string name="phone">Enter cell phone number</string>
    <string name="email">Enter e-mail address</string>
    <string name="linkedin">Enter Linkedin profile</string>
    <string name="skype">Enter Skype profile</string>


    <string name="companyName">Company name</string>
    <string name="position">Position</string>
    <string name="period">Period</string>
    <string name="username">Choose your username</string>
    <string name="name">Your name</string>
    <string name="surname">Your surname</string>
    <string name="aboutYou">About you</string>

    <string name="save_details">Save</string>

    <string name="addMoreDetails">Add experiences</string>
    <string name="education">Education</string>
    <string name="experience">Experience</string>
    <string name="contact">Contact</string>
    <string name="errornetwork">Check your Internet connection</string>
    <string name="finish">Click here and get your CV!</string>
    <string name="getCV">Get your CV</string>
    <string name="addExperience">Add experience</string>
    <string name="addedUser">User is added.</string>
    <string name="updatedUser">User is updated.</string>
    <string name="noUser">There is no user in database.</string>
    <string name="deleteAll">Delete all your data</string>
    <string name="successfullyDeleted">You have successfully deleted all your data.</string>
    <string name="number">"Num. of work experiences:</string>
    <string name="submit">Submit</string>
    <string name="addMore">Add more details</string>


</resources>
