<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GhostWhite"
    tools:context=".Experience">

    <RelativeLayout
        android:id="@+id/navigacija"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/Grey"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/app_name"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/DarkGrey"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"

            />
        <ImageButton
            android:id="@+id/goHome"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/home"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/navigacija">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
        android:id="@+id/experience"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:text="@string/experience"
        android:textSize="20dp"
        />

            <EditText
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/number"
                android:inputType="number"
                android:layout_below="@id/experience"/>

    <ScrollView
        android:id="@+id/sw2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/number">

        <LinearLayout
            android:id="@+id/Companies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/additionComapany"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/sw2"
        android:text="@string/addMoreDetails"/>

            <Button
                android:id="@+id/submit"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@id/additionComapany"
                android:text="@string/submit"/>

    <TextView
        android:id="@+id/tw1"
        android:layout_below="@id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"/>
    <Button
        android:id="@+id/finish"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/tw1"
        android:text="@string/getCV"/>



    <TextView
        android:id="@+id/out_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/finish"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>