<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GhostWhite"
    tools:context=".Basic">



    <RelativeLayout
        android:id="@+id/navigacija"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/Grey"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/app_name"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/DarkGrey"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"

            />
        <ImageButton
            android:id="@+id/goHome"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/home"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:padding="7dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/navigacija"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/borders"
        android:hint="@string/username"
        android:minWidth="300dp"/>


    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:padding="7dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/username"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/borders"
        android:hint="@string/name"
        android:minWidth="300dp"/>
    <EditText
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:padding="7dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/name"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/surname"
        android:background="@drawable/borders"
        android:minWidth="300dp"/>
    <EditText
        android:id="@+id/aboutMe"
        android:layout_width="wrap_content"
        android:padding="7dp"
        android:minHeight="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/surname"
        android:layout_marginLeft="10dp"
        android:hint="@string/aboutYou"
        android:background="@drawable/borders"
        android:minWidth="300dp"/>




    <Button
        android:id="@+id/addDetails"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/aboutMe"
        android:text="@string/addMore"/>

</RelativeLayout>