<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/navigacija"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/Grey">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/DarkGrey"
            android:textSize="18sp"

            />
    </RelativeLayout>

    <Button
        android:id="@+id/mainButton"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_centerInParent="true"
        android:text="@string/makeCV"
        android:background="@color/blueViolet"
        android:textColor="@color/lavender"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainButton"
        android:layout_marginTop="35dp"
        android:padding="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/text"
        />


</RelativeLayout>