<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GhostWhite"
    tools:context=".GetCV">

    <RelativeLayout
        android:id="@+id/topOfPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blueViolet">

        <TextView
            android:id="@+id/get_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/lavender"
            android:textSize="25dp"
            android:layout_marginTop="15dp"/>

        <RelativeLayout
            android:id="@+id/getPhone"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="50dp"
            android:layout_below="@id/get_name"
            >
            <ImageButton
                android:id="@+id/phoneicon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@color/blueViolet"
                android:layout_alignParentLeft="true"
                android:src="@drawable/phone"/>
            <TextView
                android:id="@+id/getPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/lavender"
                android:layout_toRightOf="@id/phoneicon"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/getEmail"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="50dp"
            android:layout_below="@id/getPhone"
            >
            <ImageButton
                android:id="@+id/emailicon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@color/blueViolet"
                android:layout_alignParentLeft="true"
                android:src="@drawable/email"/>
            <TextView
                android:id="@+id/getEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/lavender"
                android:layout_toRightOf="@id/emailicon"/>
        </RelativeLayout>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topOfPage"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/getAboutMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/DarkGrey"/>

            <TextView
                android:id="@+id/getEducation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/getAboutMe"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/education"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bachelorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/getEducation"
                android:layout_marginLeft="12dp"
                android:text="@string/bachelor"
                android:textColor="@color/DarkGrey"
                android:textSize="16dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/getBachelor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/getEducation"
                android:layout_marginLeft="10dp"
                android:textColor="@color/blueViolet"
                android:layout_toRightOf="@+id/bachelorLabel"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/masterLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/getBachelor"
                android:layout_marginLeft="12dp"
                android:text="@string/master"
                android:textSize="16dp"
                android:textColor="@color/DarkGrey"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/getMaster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/getBachelor"
                android:layout_marginLeft="10dp"
                android:textColor="@color/blueViolet"
                android:layout_toRightOf="@id/masterLabel"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/languagesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/getMaster"
                android:layout_marginLeft="12dp"
                android:text="@string/languages"
                android:textSize="16dp"
                android:textColor="@color/DarkGrey"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/getLanguages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/getMaster"
                android:layout_marginLeft="10dp"
                android:textColor="@color/blueViolet"
                android:layout_toRightOf="@id/languagesLabel"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/highLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/getLanguages"
                android:layout_marginLeft="12dp"
                android:text="@string/highSchool"
                android:textColor="@color/DarkGrey"
                android:textSize="16dp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/getHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/getLanguages"
                android:layout_marginLeft="10dp"
                android:textColor="@color/blueViolet"
                android:layout_toRightOf="@id/highLabel"
                android:textSize="15dp" />


            <TextView
                android:id="@+id/getExperience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/getHigh"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/experience"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/getCompanies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blueViolet"
                android:layout_below="@id/getExperience" />

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/deleteUser"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/scrollView"
        android:text="@string/deleteAll"/>




</RelativeLayout>